--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,182 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  /*margin: 0; */
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+/*// NavBar styling //*/
+.custom-btn-toolbar {
+  background-color: gray !important;
+}
+
+.logo {
+  background-color: unset !important;
+}
+
+.btn {
+  margin-right: 1em !important;
+  padding: 5px !important;
+  background-color: black !important;
+  border: unset !important;
+  color: white !important;
+}
+
+/* Modal styling */
+.overlay {
+  position: fixed;
+  display: block;
+  overflow: auto;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+}
+
+.form {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.content {
+  width: fit-content;
+  margin: auto;
+}
+
+.modal-content {
+  background-color: grey;
+  height: 30%;
+  width: 30%;
+  margin: 15% auto;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.modal-box {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: unset;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  margin-right: 10%;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+  transition: all 0.5s ease 0s;
+}
+
+/*// contact form //*/
+form {
+  display: flex;
+  font-family: "open sans", sans-serif;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: flex-end;
+  margin: unset;
+  box-sizing: border-box;
+  max-width: 500px;
+  width: 100%;
+  min-height: 300px;
+  padding: 15px 20px;
+  border-radius: 5px;
+}
+
+.main-info {
+  text-align: center;
+  font-size: 18px;
+}
+
+input,
+textarea {
+  min-height: 32px;
+  margin-bottom: 10px;
+  padding-left: 7px;
+  border-radius: 5px;
+}
+select {
+  min-height: 32px;
+  width: 100%;
+  margin-bottom: 10px;
+  padding-left: 7px;
+  border-radius: 5px;
+}
+
+input::placeholder,
+textarea::placeholder {
+  color: black;
+  opacity: 0.5;
+}
+
+textarea {
+  resize: none;
+  padding-top: 4px;
+}
+
+.select-wrapper {
+  width: 100%;
+  position: relative;
+}
+
+.label__text {
+  padding: 4px 7px;
+}
+
+.text-box {
+  width: 100%;
+}
+
+.button {
+  width: 100%;
+  height: 36px;
+  box-sizing: border-box;
+  margin-top: 20px;
+  border-radius: 5px;
+  border: none;
+
+  background-color: rgb(79, 80, 80);
+  color: white;
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+.button:hover {
+  background-color: rgba(165, 2, 2, 0.87);
+}
+
+.checkbox-container {
+  display: flex;
+  align-items: center;
+}
+
+.checkbox-label {
+  display: flex;
+  align-items: center;
 }
