--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,47 @@
 .products {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  background-color: white;
 }
 .cards {
   display: flex;
+  width: 400px;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
   margin: 10px;
-  border: solid 3px ghostwhite;
+  padding-top: 10px;
+  background-color: whitesmoke;
   border-radius: 10px;
+}
+.cards h4,
+h3 {
+  margin: unset;
+}
+
+.cards-2 {
+  width: 300px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: white;
+}
+.cards-2 div {
+  display: flex;
+  margin-bottom: 5px;
+  padding: 5px;
+  align-items: center;
+  justify-content: space-between;
+  background-color: whitesmoke;
+}
+
+.add {
+  border: none;
+  background-color: silver;
+  transition: all 0.5s ease 0s;
+}
+.add:hover {
+  background-color: orange;
+  color: white;
+  cursor: pointer;
 }
 
 .products img {
